[tool.poetry]
name = "repl_python3_pyinmyhydroflask"
version = "0.1.0"
description = "a cool, dumb, stupid, but also cool way to show a websites source html code in a flask app. did i mention it was cool??"
authors = ["Spinfal <spinfal@atheist.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
termcolor = "^1.1.0"
random-word = "^1.0.4"
flask-login = "^0.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
